[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fbchat"
authors = [
    {name = "kvgx12", email = "szczepan7700@gmail.com"}
]
readme = "README.rst"
dynamic = ["version", "description"]
dependencies = [
    "attrs>=19.1",
    "beautifulsoup4~=4.0",
    "aiohttp",
    "yarl",
    "paho-mqtt~=1.5",
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Communications :: Chat",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = "BSD 3-Clause"

[project.optional-dependencies]
proxy = [
    "aiohttp-socks",
    "pysocks"
]
doc = [
    "sphinx"
]
test = [
    "pytest>=4.3,<6.0",
]
lint = [
    "black",
    "pyright"
]
